--- a/package.json5
+++ b/package.json5
@@ -29,11 +29,12 @@
   },
   // FIXME: Re-enable coverage with the next release of Jest. (Currently
   // at 17.0.3)
-  // "novivia-tester": {
-  //   "noCoverage": true,
-  // },
+  "novivia-tester": {
+    "noCoverage": true,
+  },
   "scripts": {
     "build": "novivia-builder build",
+    "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "lint": "novivia-linter lint .",
     "open-source": "open-source",
     "pub": "novivia-builder publish",
@@ -47,11 +48,16 @@
     "@novivia/open-sourcer": "^0.1.1",
     "@novivia/tester": "^0.1.0",
     "common-tags": "^1.4.0",
+    "flow-bin": "^0.36.0",
   },
   "dependencies": {
     // npm dependencies.
     "stack-utils": "^0.4.0",
     "stacktrace-parser": "^0.1.4",
     "verror": "^1.9.0",
+    "base-x": "^1.1.0",
+    "uuid": "^3.0.1",
+    "lodash": "^4.17.2",
+    "uuid-validate": "0.0.2",
   },
 }
