Added the URL format utility.

--- a/package.json5
+++ b/package.json5
@@ -51,17 +51,20 @@
     "@novivia/linter": "^1.9.0",
     "@novivia/open-sourcer": "^0.1.1",
     "@novivia/tester": "^0.1.0",
-    "common-tags": "^1.4.0",
+
+    // npm dependencies.
     "flow-bin": "^0.36.0",
   },
   "dependencies": {
     // npm dependencies.
     "base-x": "^1.1.0",
+    "common-tags": "^1.4.0",
     "lodash": "^4.17.2",
     "stack-utils": "^0.4.0",
     "stacktrace-parser": "^0.1.4",
     "uuid": "^3.0.1",
     "uuid-validate": "0.0.2",
     "verror": "^1.9.0",
+    "path-to-regexp": "^1.7.0",
   },
 }
