--- a/package.json5
+++ b/package.json5
@@ -67,5 +67,6 @@
     "verror": "^1.9.0",
     "path-to-regexp": "^1.7.0",
     "html-entities": "^1.2.0",
+    "sanitize-html": "^1.13.0",
   },
 }
