--- a/.eslintrc
+++ b/.eslintrc
@@ -73,7 +73,9 @@
     "no-useless-escape": "error",
     "no-useless-rename": "error",
     "no-whitespace-before-property": "error",
-    "object-property-newline": "error",
+    "object-property-newline": ["error", {
+      "allowMultiplePropertiesPerLine": true
+    }],
     "one-var": ["error", "never"],
     "quotes": "error",
     "rest-spread-spacing": "error",
@@ -173,10 +175,9 @@
     "unicode-bom": "error",
     "valid-jsdoc": ["error", {
       "matchDescription": "^[A-Z](?:.|\\s)*?[.]$",
-      "prefer": {
-        "returns": "return"
-      },
-      "requireReturn": false
+      "requireParamDescription": false,
+      "requireReturn": false,
+      "requireReturnType": false
     }],
     "valid-typeof": ["error", {
       "requireStringLiterals": true
@@ -256,7 +257,7 @@
     "babel/new-cap": "error",
     "import/newline-after-import": "error",
     "import/no-absolute-path": "error",
-    "babel/no-await-in-loop": "error",
+    "no-await-in-loop": "error",
     "no-class-assign": "error",
     "no-confusing-arrow": ["error", {
       "allowParens": true
@@ -308,9 +309,11 @@
     "flowtype/no-primitive-constructor-types": "error",
     "flowtype/object-type-delimiter": "error",
     "flowtype/require-parameter-type": ["error", {
-      "excludeArrowFunctions": "expressionsOnly"
+      "excludeArrowFunctions": true
     }],
-    "flowtype/require-return-type": "error",
+    "flowtype/require-return-type": ["error", {
+      "excludeArrowFunctions": true
+    }],
     "flowtype/require-valid-file-annotation": ["error", "never", {
       "annotationStyle": "block"
     }],
@@ -322,7 +325,7 @@
     "flowtype/space-after-type-colon": "error",
     "flowtype/space-before-generic-bracket": "error",
     "flowtype/space-before-type-colon": "error",
-    "flowtype/type-id-match": "error",
+    "flowtype/type-id-match": ["error", "^([A-Z][A-Za-z0-9]*)+(?:Type)?$"],
     "flowtype/union-intersection-spacing": "error",
     "flowtype/use-flow-type": "error",
     "you-dont-need-lodash-underscore/assign": "error",
