--- a/package.json5
+++ b/package.json5
@@ -3,7 +3,7 @@
   "role": "utilities",
   "version": "0.1.3",
   "engines": {
-    "node": ">=4",
+    "node": ">=4.5",
     "npm": ">=3",
   },
   "license": "SEE LICENSE IN LICENSE.md",
@@ -19,13 +19,23 @@
     "url": "git+ssh://git.novivia.com/nov/modules.utilities"
   },
   "main": "index.js",
+  "novivia-babel": {
+    "babelConfiguration": {
+      // FIXME: Investigate why tests are choking with the combination of class
+      // properties and the legacy decorators transform. See
+      // https://github.com/loganfsmyth/babel-plugin-transform-decorators-legacy/issues/17
+      "includeLegacyDecorators": false,
+    },
+  },
   "novivia-builder": {
     "babelPatterns": [
       "**/*.js",
     ],
 
-    // Force compilation with frontend compatibility.
-    "compileTargets": {},
+    // Force compilation with UglifyJS compatibility.
+    "compileTargets": {
+      "uglify": true,
+    },
   },
   "scripts": {
     "build": "novivia-builder build",
@@ -42,24 +52,24 @@
   },
   "devDependencies": {
     // Novivia dependencies.
-    "@novivia/build-module": "^0.5.2",
+    "@novivia/build-module": "^0.5.3",
     "@novivia/linter": "^1.10.1",
-    "@novivia/open-sourcer": "^0.1.2",
-    "@novivia/tester": "^1.0.0",
+    "@novivia/open-sourcer": "^0.1.3",
+    "@novivia/tester": "^1.2.0",
 
     // npm dependencies.
-    "flow-bin": "^0.37.0",
+    "flow-bin": "^0.45.0",
     "semver": "^5.3.0",
   },
   "dependencies": {
     // npm dependencies.
-    "base-x": "^1.1.0",
+    "base-x": "^3.0.0",
     "common-tags": "^1.4.0",
-    "html-entities": "^1.2.0",
-    "lodash": "^4.17.2",
+    "html-entities": "^1.2.1",
+    "lodash": "^4.17.4",
     "path-to-regexp": "^1.7.0",
-    "sanitize-html": "^1.13.0",
-    "stack-utils": "^0.4.0",
+    "sanitize-html": "^1.14.1",
+    "stack-utils": "^1.0.1",
     "stacktrace-parser": "^0.1.4",
     "uuid": "^3.0.1",
     "uuid-validate": "0.0.2",
